tests/neg-custom-args/i10994.check
-- Error: tests/neg-custom-args/i10994.scala:2:19 ----------------------------------------------------------------------
2 |  case (b: Boolean): Boolean => () // error
  |                   ^
  |                   Type ascriptions after patterns other than:
  |                     * variable pattern, e.g. `case x: String =>`
  |                     * number literal pattern, e.g. `case 10.5: Double =>`
  |                   are no longer supported. Remove the type ascription or move it to a separate variable pattern.
